Create functionality to add new albums to firebase

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,25 @@
-<p>
-  admin works!
-</p>
+<div class="card card-body">
+  <h3>Add New Album to Inventory</h3>
+
+  <div>
+    <div>
+      <div>
+        <label>Album Title:</label>
+        <br>
+        <input #newTitle>
+      </div>
+
+      <div>
+        <label>Album Artist:</label>
+        <br>
+        <input #newArtist>
+      </div>
+      <div>
+        <label>Album Description:</label>
+        <br>
+        <textarea #newDescription></textarea>
+      </div>
+      <button class="btn btn-info" (click)="submitForm(newTitle.value, newArtist.value, newDescription.value); newTitle.value=''; newArtist.value=''; newDescription.value=''">Add</button>
+    </div>
+  </div>
+</div>
